fixed-spacing

--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -4,6 +4,7 @@ body {
     padding: 0;
     font-size: 14px;
     font-family: 'Nunito Sans', sans-serif;
+    overflow-x: hidden;
 }
 
 :root {
