--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -77,6 +77,9 @@
         max-width: 100vw;
         overflow: hidden;
         padding: 0 $padding-side;
+        .grid-container {
+            padding: 0;
+        }
     }
 }
 
